--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -1,7 +1,6 @@
-$fontAwesomePath: "/++genweb++static/fonts";
-@import "compass_twitter_bootstrap/font-awesome";
-@import "token-input-facebook";
-@import "select2";
+$fa-font-path: "/++components++fontawesome/fonts";
+@import "fontawesome/scss/font-awesome";
+// @import "select2";
 // @import "maxui";
 @import "overrides";
 @import "hidden";
