--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -950,8 +950,11 @@ label[for="form.ext_editor"] ~ div.widget {
 
 .documentByLine {
   .creator_image_byline {
-    width: 40px;
-    height: 40px;
+    height: 24px;
+    margin-bottom: 15px;
+    margin-right: 2px;
+    vertical-align: top;
+    width: 24px;
     @include border-radius(50%);
   }
 }
@@ -1116,5 +1119,40 @@ nav#portal-personaltools-wrapper {
     font-size: 85%;
     margin-bottom: 11px;
 }
-
+}
+@media only screen and (max-width: 480px) {
+  #menusup nav .bubble {
+      float: left;
+      width: 50%;
+      border-right: 1px solid white;
+  }
+  #menusup nav .bubble {
+      float: left;
+      font-size: 13px;
+      width: 25%;
+  } 
+  .template-homepage #menusup nav .bubble {
+      float: left;
+      font-size: 13px;
+      width: 50%;
+  }  
+  #menusup {
+      height: 55px;
+  }
+  .template-homepage #menusup {
+      height: 55px;
+  }
+  #day .arrow {
+      border-left-color: #f58d3d;
+      display: none;
+  }
+  .bubble.left {
+      margin-right: 0;
+  }
+  #menusup nav i {
+    display: none;
+  }
+  #menusup nav a {
+    font-size: 13px
+  }
 }
