Fix portlet_calendar and update CSS

--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -9,6 +9,7 @@ $fa-font-path: "/++components++root/fontawesome/fonts";
 @import "templates";
 @import "plugins";
 @import "iefixes";
+@import "idees";
 // @import "genwebupc";
 
 // Victor for pushing it to genweb.theme
