--- a/ulearn/theme/stylesheets/ulearn.css
+++ b/ulearn/theme/stylesheets/ulearn.css
@@ -2120,10 +2120,10 @@ li > .noMenuAction {
     padding: 0;
     text-align: center;
     text-shadow: 0 0 1px white;
-    width: 55px; }
+    width: 60px; }
   .idea .span9 {
     margin-left: 15px;
-    max-width: 510px; }
+    max-width: 508px; }
   .idea .total {
     color: #999;
     font-size: 28px;
@@ -2168,10 +2168,26 @@ li > .noMenuAction {
   background: none repeat scroll 0 0 #007bc0;
   border-radius: 3px;
   color: white;
+  float: left;
+  font-size: 12px;
   font-weight: 600;
   margin-right: 20px;
   padding: 3px 14px 4px; }
 .nx24adminlinks a:hover {
+  color: white;
+  background: #006fae;
+  text-decoration: none; }
+
+.nx24userlinks a {
+  background: none repeat scroll 0 0 #007bc0;
+  border-radius: 3px;
+  color: white;
+  float: left;
+  font-size: 12px;
+  font-weight: 600;
+  margin-right: 0;
+  padding: 3px 14px 4px; }
+.nx24userlinks a:hover {
   color: white;
   background: #006fae;
   text-decoration: none; }
@@ -2203,17 +2219,20 @@ li > .noMenuAction {
   font-size: 11px;
   height: 55px;
   padding: 0;
-  margin-bottom: 25px;
+  margin-bottom: 0;
+  margin-right: 10px;
   text-align: center;
   text-shadow: 0 0 1px white;
-  width: 55px; }
-.portaltype-ulearn-proposal #portal-column-content #content .span9 {
-  width: 66%; }
-  .portaltype-ulearn-proposal #portal-column-content #content .span9 .author {
+  width: 60px;
+  line-height: 8px; }
+.portaltype-ulearn-proposal #portal-column-content #content .span7 {
+  margin-left: 5px;
+  width: 56%; }
+  .portaltype-ulearn-proposal #portal-column-content #content .span7 .author {
     color: #007bc0;
     font-weight: bold;
     font-size: 14px; }
-  .portaltype-ulearn-proposal #portal-column-content #content .span9 .created {
+  .portaltype-ulearn-proposal #portal-column-content #content .span7 .created {
     color: #007bc0;
     font-size: 14px; }
 .portaltype-ulearn-proposal #portal-column-content #content .span4 {
@@ -2233,6 +2252,7 @@ li > .noMenuAction {
   font-weight: bold;
   line-height: 25px;
   margin-top: 5px;
+  margin-bottom: 5px;
   text-shadow: 0 0 1px white; }
 .portaltype-ulearn-proposal #portal-column-content #content .eines {
   width: 20%; }
@@ -2244,6 +2264,8 @@ li > .noMenuAction {
   float: right;
   padding: 3px 14px; }
 
+.template-proposalslist .idea:first-child {
+  padding-top: 40px; }
 .template-proposalslist .eines .magrada {
   float: none;
   margin-right: 0; }
@@ -2255,11 +2277,54 @@ li > .noMenuAction {
   float: right;
   margin-top: -7px; }
 
+.template-proposalslistbylikes .idea:first-child {
+  padding-top: 40px; }
+
+.template-pendingproposalslist .idea:first-child {
+  padding-top: 35px; }
+
+.portaltype-ulearn-proposal .well {
+  background-color: #e9f4fa;
+  border: 1px solid #c1e5fa;
+  border-radius: 4px;
+  box-shadow: none;
+  margin: 10px auto 30px; }
+  .portaltype-ulearn-proposal .well li {
+    list-style: none;
+    margin-top: 5px; }
+.portaltype-ulearn-proposal .documentFirstHeading {
+  margin-bottom: 20px; }
+
+#commenting {
+  padding-top: 0; }
+  #commenting legend {
+    font-weight: bold; }
+
+.section-idees .popover {
+  background-color: #444;
+  color: white; }
+  .section-idees .popover ul {
+    margin-left: 0; }
+  .section-idees .popover li {
+    border-bottom: 1px solid #aaa;
+    font-size: 13px;
+    line-height: 18px;
+    list-style-position: inside;
+    list-style-type: numbers;
+    margin-bottom: 4px;
+    padding-bottom: 5px; }
+
+.section-idees .popover.bottom .arrow:after, .section-idees .bottom.expandable-content .arrow:after {
+  border-bottom-color: #444; }
+
 @media only screen and (max-width: 768px) {
   #portlet-prefs, .documentEditable, .template-overview-controlpanel #content {
     padding: 10px !important; }
 
-  .template-proposalslist .idea:first-child {
+  .userrole-manager .template-proposalslist .idea:first-child {
+    padding-top: 100px; }
+
+  .userrole-authenticated .template-proposalslist .idea:first-child {
     padding-top: 100px; }
 
   .nx24adminlinks a {
@@ -2270,19 +2335,31 @@ li > .noMenuAction {
     padding: 6px 14px 4px;
     width: 90%; }
 
+  .nx24userlinks a {
+    clear: both;
+    float: left;
+    margin-bottom: 10px;
+    min-height: 22px;
+    padding: 6px 14px 4px;
+    width: 90%; }
+
   .idea .span1 {
     float: left; }
-  .idea .span9 {
+  .idea .span7 {
+    clear: both;
     float: left;
-    max-width: 50%; }
+    margin-left: 0;
+    margin-top: 10px;
+    width: 50%; }
 
   .portaltype-ulearn-proposal #portal-column-content #content .span1 {
     float: left; }
 
-  .portaltype-ulearn-proposal #portal-column-content #content .span9 {
+  .portaltype-ulearn-proposal #portal-column-content #content .span7 {
+    clear: both;
     float: left;
-    margin-left: 10px;
-    width: 56%; }
+    margin-left: 0;
+    width: 60%; }
 
   .portaltype-ulearn-proposal #portal-column-content #content .eines {
     width: auto; }
